# markov_chains

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  markov.cpp  markov.hpp
etc/: tpm1.txt  tpm2.txt
src/: main.cpp  markov.cpp  markov.hpp
tests/: test_main.cpp
